--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="input-field col s6">
-                        <input type="text" placeholder="Add Calories" id="itemCalories">
+                        <input type="number" placeholder="Add Calories" id="itemCalories">
                         <label for="itemCalories">Calories</label>
                     </div>
                     <button class="add-btn btn green darken-3"><i class="fa fa-plus"></i> Add meal</button>
