--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                         <label for="itemCalories">Calories</label>
                     </div>
                     <button class="add-btn btn green darken-3"><i class="fa fa-plus"></i> Add meal</button>
+                    <button class="cancel-update-btn btn orange darken-3" style="display: none"><i class="fas fa-undo"></i> Cancel update</button>
+                    <button class="update-btn btn green darken-3" style="display: none"><i class="fas fa-edit"></i> Update meal</button>
+                    <button class="delete-btn btn red darken-3" style="display: none"><i class="fas fa-trash"></i> Delete meal</button>
                 </div>
             </form>
         </div>
